# shortland

./: Cargo.toml  LICENSE  README.md
.github/workflows/: report.yml  rust.yml
src/: backend.rs  errors.rs  handlers.rs  lib.rs  main.rs  service.rs  settings.rs  shortener.rs
src/backend/: memory.rs  mod.rs  redis.rs
tests/: test_handlers.rs
