[package]
name = "shortland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
axum = "0.6.20"
chrono = "0.4"
config = { version = "0.15", features = ["yaml", "toml"], default-features = false }
harsh = "0.2"
redis = { version = "0.25", features = ["aio", "connection-manager", "tokio-comp"] }
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4"] }
